          'unsatisfy_relation_expression' methods with
          'cupt::resolver::track-reasons' option enabled.
      - Worker:
        - 'update_release_and_index_data': fixed wrapping errors in child
           processes.
        - 'get_unpacked_sizes_preview': fixed a crash when purging packages in
          'config-files' state.
    - Download:
      - Methods/Curl:
        - Honor 'acquire::retries' option instead of hardcoded one.
    - Config:
      - Added configuration option 'acquire::retries'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Thu, 09 Jul 2009 17:31:50 +0300

cupt (0.3.1) unstable; urgency=low

  * cupt:
    - New 'policysrc' subcommand.
  * Cupt:
    - Download:
      - Progress:
        - New method 'get_overall_estimated_time'.
      - Progresses/Console:
        - Display estimated time while downloading.
    - Cache:
      - SourceVersion:
        - Don't choke on native Debian source packages.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Sun, 05 Jul 2009 12:30:47 +0300

cupt (0.3.0) unstable; urgency=low

  * cupt:
    - New 'showsrc' subcommand.
    - New 'build-dep' subcommand.
    - New 'source' subcommand.
  * Cupt:
    - Cache:
      - ArchitecturedRelation:
        - Implemented.
      - SourceVersion:
        - Implemented.
      - Package:
        - 'get_versions': generate exception if there are no valid version
          entries for the package.
      - New method 'get_source_package'.
      - 'get_pin': fixed to not attempt to obtain installed version for source
        packages.
      - Parsing source lists: allow all whitespace characters between fields.
        Patch by Didier 'OdyX' Raboud <didier@raboud.com>. (Closes: #535520)
      - Parsing source lists: don't assume that /etc/apt/sources.list exists.
        Thanks to Didier 'OdyX' Raboud <didier@raboud.com>. (Closes: #535600)
      - Parsing source lists: process only files that have '.list' suffix in
        sources.list.d subdirectory.