@@ -48,6 +48,8 @@ cupt (0.3.2~) UNRELEASED; urgency=low
            processes.
         - 'get_unpacked_sizes_preview': fixed a crash when purging packages in
           'config-files' state.
+        - 'change_system': polished to make it able to correctly purge packages
+          in 'config-files' state.
     - Download:
       - Methods/Curl:
         - Honor 'acquire::retries' option instead of hardcoded one.
